--- a/avd_css/contact.html
+++ b/avd_css/contact.html
@@ -41,21 +41,21 @@
             <h2>The 8 Playable Classes of Nightreign</h2>
             <ul>
                 <li class="nightblue">Wylder</li>
-                <li id="bold"><p>A balanced all-rounder knight who uses melee weapons and grappling hook tactics.</p></li>
+                <li><p>A balanced all-rounder knight who uses melee weapons and grappling hook tactics.</p></li>
                 <li class="nightblue">Guardian</li>
-                <li id="bold"><p>A heavily-armoured defender with a massive shield and crowd-control skills; excels in holding the front line.</p></li>
+                <li><p>A heavily-armoured defender with a massive shield and crowd-control skills; excels in holding the front line.</p></li>
                 <li class="nightblue">Ironeye</li>
-                <li id="bold"><p>A precise archer/marksman who targets enemy weak spots and excels at ranged disruption.</p></li>
+                <li><p>A precise archer/marksman who targets enemy weak spots and excels at ranged disruption.</p></li>
                 <li class="nightblue">Duchess</li>
-                <li id="bold"><p>A nimble rogue/assassin type, skilled in stealth and support tactics.</p></li>
+                <li><p>A nimble rogue/assassin type, skilled in stealth and support tactics.</p></li>
                 <li class="nightblue">Raider</li>
-                <li id="bold"><p>A berserker-style warrior with brute strength, suited for aggressive close-quarters combat.</p></li>
+                <li><p>A berserker-style warrior with brute strength, suited for aggressive close-quarters combat.</p></li>
                 <li class="nightblue">Recluse</li>
-                <li id="bold"><p>A sorceress who wields elemental magic and provides long-range magical support.</p></li>
+                <li><p>A sorceress who wields elemental magic and provides long-range magical support.</p></li>
                 <li class="nightblue">Executor</li>
-                <li id="bold"><p>A disciplined katana-wielding fighter with precise strikes, suitable for skilled players.</p></li>
+                <li><p>A disciplined katana-wielding fighter with precise strikes, suitable for skilled players.</p></li>
                 <li class="nightblue">Revenant</li>
-                <li id="bold"><p>A summoner/support type who uses spirits and revival mechanics to assist the team.</p></li>
+                <li><p>A summoner/support type who uses spirits and revival mechanics to assist the team.</p></li>
             </ul>
         </aside>
     </main>
