--- a/final/darksouls3.html
+++ b/final/darksouls3.html
@@ -30,24 +30,25 @@
         <h2>About Dark Souls III</h2>
         <p>Dark Souls III is the final chapter in the Dark Souls series, blending fast-paced combat, rich atmosphere, and intricate worldbuilding into one of FromSoftware’s most polished experiences. Set in the dying kingdom of Lothric, the game follows the Ashen One, an Undead summoned to link the fading Flame once more. The world is filled with collapsing ruins, twisted landscapes, and remnants of past ages, all connected by themes of cycles, sacrifice, and the slow decline of fire. Combat is faster and more fluid than in previous entries, rewarding quick reactions, precise timing, and smart use of stamina. Players can experiment with a wide range of weapons, spells, and builds, allowing for many approaches to each encounter. The story unfolds through subtle hints, cryptic conversations, and environmental clues, encouraging players to uncover the history behind the Lords of Cinder and the forces that shaped the world.
         As players explore deeper into Lothric and beyond, they face some of the most memorable bosses in the series, each designed to test skill and push the player toward mastery. The environments shift from dark cathedrals to smoldering wastes and forgotten cities, creating a constant sense of mystery and discovery. Every area feels carefully crafted, with hidden paths, optional challenges, and powerful rewards for those who seek them. Dark Souls III also strengthens its online features, allowing cooperative play and competitive invasions that enrich the overall experience. The game serves as both a conclusion and a reflection on the entire series, honoring its roots while refining its mechanics. Its atmosphere, music, storytelling, and challenging design make it a fitting farewell to the world of Dark Souls and a lasting milestone in action role-playing games.</p>
+        </section>
         <hr>
-        <section class="darksouls3">
+        <div class="darksouls3">
             <div class="col"><img src="images/v8JlD8KcQUtTqaLBmpFnj1ESRR5zMkLk.webp" alt="ds3cover"></div>
             <div class="col"><img src="images/Dark-Souls-3-Poise.jpg" alt="ds3ss"></div>
             <div class="col"><img src="images/7rcukrqgehne1.png" alt="ds3cool"></div>
-        </section>
+        </div>
         <hr>
         <h3>Opening Cinematic of Dark Souls III</h3>
         <iframe width="65%" height="315" src="https://www.youtube.com/embed/_zDZYrIUgKE?si=9yM9OUTXv4xEPgGs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <hr>
         <h3>Extra Info About Dark Souls III</h3>
-        <section class="about_dark_souls">
+        <div class="about_dark_souls">
             <ul>
                 <li><a href="https://en.bandainamcoent.eu/dark-souls/dark-souls-iii">Offical Dark Souls III Website</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Dark_Souls_III">Dark Souls III Wiki</a></li>
                 <li><a href="https://darksouls3.wiki.fextralife.com/Dark+Souls+3+Wiki">Dark Souls III FextraLife Wiki</a></li>
             </ul>
-        </section>   
+        </div>   
         <hr>
     </main>
     <footer>
