--- a/final/index.html
+++ b/final/index.html
@@ -35,7 +35,7 @@ What also defines the series is its unique take on multiplayer. Whether teaming 
 The influence of Dark Souls reaches far beyond its own trilogy. Its approach to difficulty, worldbuilding, and player-driven discovery has shaped countless games across many genres. Yet the series remains unique because it balances challenge with fairness, despair with beauty, and mystery with careful design. The Dark Souls trilogy stands not only as a collection of memorable games but as a unified vision about the cycles of life and death, the power of persistence, and the meaning players create through their struggles. It remains one of the most respected and beloved game series ever made, celebrated for the way it challenges, inspires, and rewards those who step into its fading worlds.</p>
         </section>
         <hr>
-        <section class="darksouls3">
+        <div class="darksouls3">
             <div class="col"><img src="images/home0.webp" alt="home0"></div>
             <div class="col"><img src="images/home_img.jpg" alt="home1"></div>
             <div class="col"><img src="images/home2.jpg" alt="home2"></div>
@@ -44,17 +44,17 @@ The influence of Dark Souls reaches far beyond its own trilogy. Its approach to 
             <div class="col"><img src="images/home5.jpg" alt="home5"></div>
             <div class="col"><img src="images/home6.jpg" alt="home6"></div>
             <div class="col"><img src="images/home7.jpg" alt="home7"></div>
-        </section>
+        </div>
         <hr>
         <h3>Extra Info About The Dark Souls Series</h3>
-        <section class="about_dark_souls">
+        <div class="about_dark_souls">
             <ul>
                 <li><a href="https://www.fromsoftware.jp/ww/">Developers Offical Website</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Dark_Souls">Offical News and Information</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/FromSoftware">FromSoftware Wiki</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Hidetaka_Miyazaki">The Creator of Dark Souls</a></li>
             </ul>
-        </section>
+        </div>
         <hr>
     </main>
     <footer>
