--- a/final/darksouls1.html
+++ b/final/darksouls1.html
@@ -38,24 +38,24 @@
         The heart of the game remains unchanged, including its slow, methodical combat and its layered storytelling. The remastered edition makes it easier to appreciate the world’s details, from crumbling ruins to eerie landscapes filled with hidden meaning. Players still face tough enemies, unforgiving bosses, and the joy of discovering shortcuts and secrets. The updated online system also strengthens co-op and competitive play, giving the community new life. Dark Souls Remastered stands as the definitive way to experience the original game while preserving everything that made it special.</p>
         </section>
         <hr>
-        <section class="darksouls">
+        <div class="darksouls">
             <div class="col"><img src="images/Dark_Souls_Cover_Art.jpg" alt="ds1cover"></div>
             <div class="col"><img src="images/Artorias_of_the_Abyss_Cover.jpg" alt="ds1dlc"></div>
             <div class="col"><img src="images/betta.png" alt="ds1r"></div>
-        </section>
+        </div>
         <hr>
         <h3>Opening Cinematic of Dark Souls</h3>
-        <iframe width="65%" height="315" src="https://www.youtube.com/embed/4lmEqpgg3B4?si=ofDJ1kOKGpjQ4G8_" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="video_frame" height="315" src="https://www.youtube.com/embed/4lmEqpgg3B4?si=ofDJ1kOKGpjQ4G8_" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <hr> 
         <h3>Extra Info About Dark Souls</h3>
-        <section class="about_dark_souls">
+        <div class="about_dark_souls">
             <ul>
                 <li><a href="https://en.bandainamcoent.eu/dark-souls/dark-souls">Offical Dark Souls Website</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Dark_Souls">Dark Souls Wiki</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Dark_Souls:_Artorias_of_the_Abyss">Artorias of the Abyss Wiki</a></li>
                 <li><a href="https://en.bandainamcoent.eu/dark-souls/dark-souls-remastered">Offical Dark Souls Remastered Website</a></li>
             </ul>
-        </section>
+        </div>
         <hr>
     </main>
     <footer>
