--- a/final/darksouls2.html
+++ b/final/darksouls2.html
@@ -41,24 +41,24 @@
         The expansion features a unique final area that changes based on the player's progress, allowing for a more dynamic approach to the final battle. New spells, weapons, and armor sets encourage experimentation and help players overcome the frozen threats. The bosses blend spectacle and difficulty, providing a memorable end to the trilogy of DLCs. Crown of the Ivory King is widely regarded as one of the strongest content additions in the series for its mood, worldbuilding, and emotional weight.</p>
         </section>
         <hr>
-        <section class="darksouls">
+        <div class="darksouls">
             <div class="col"><img src="images/ds2better.jpg" alt="ds2cover"></div>
             <div class="col"><img src="images/ds2dlc1.webp" alt="ds2dlc1"></div>
             <div class="col"><img src="images/ds2dlc2.webp" alt="ds2dlc2"></div>
             <div class="col"><img src="images/ds2dlc3.webp" alt="ds2dlc3"></div>
-        </section>
+        </div>
         <hr>
         <h3>Opening Cinematic of Dark Souls II</h3>
-        <iframe width="65%" height="315" src="https://www.youtube.com/embed/svy0Ih77fuc?si=Pbq5Yz5gXynqI9j4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="video_frame" height="315" src="https://www.youtube.com/embed/svy0Ih77fuc?si=Pbq5Yz5gXynqI9j4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <hr>
         <h3>Extra Info About Dark Souls II</h3>
-        <section class="about_dark_souls">
+        <div class="about_dark_souls">
             <ul>
                 <li><a href="https://en.bandainamcoent.eu/dark-souls/dark-souls-ii">Offical Dark Souls II Website</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Dark_Souls_II">Dark Souls II Wiki</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Dark_Souls_II:_The_Lost_Crowns">The Lost Crowns Wiki</a></li>
             </ul>
-        </section> 
+        </div> 
         <hr>
     </main>
     <footer>
