--- a/final/darksouls3aoa.html
+++ b/final/darksouls3aoa.html
@@ -32,19 +32,19 @@
         The DLC also offers some of the most intense combat encounters in Dark Souls III. New enemy types are aggressive and unpredictable, forcing players to adapt quickly and approach battles with caution. Ashes of Ariandel introduces a variety of weapons, spells, and armor sets that expand the possibilities for different builds. The boss fights stand out as major highlights, combining fast-paced combat, dramatic staging, and emotional weight that ties directly into the story of the painting’s downfall. The final battle is especially notable for its difficulty and cinematic presentation, leaving a lasting impression on players who complete it. As a whole, Ashes of Ariandel deepens the world of Dark Souls III with its haunting setting, layered storytelling, and challenging gameplay, making it a memorable and atmospheric chapter within the final game of the series.</p>
         </section>
         <hr>
-        <section class="darksouls3">
+        <div class="darksouls3">
             <div class="col"><img src="images/bestever.jpg" alt="ds3dlc1cover"></div>
             <div class="col"><img src="images/f61d294696cdec9d407b4e09697c15bc08d1fc91476905cf87724e47e6cbd649.jpg" alt="ds3dlcss"></div>
             <div class="col"><img src="images/ds3dlc1cool.webp" alt="ds3dlc1cool"></div>
-        </section>
+        </div>
         <hr>
         <h3>Extra Info About Ashes of Ariandel</h3>
-        <section class="about_dark_souls">
+        <div class="about_dark_souls">
             <ul>
                 <li><a href="https://www.bandainamcoent.com/news/ashes-of-ariandel-live">Offical Ashes of Ariandel Info</a></li>
                 <li><a href="https://darksouls3.wiki.fextralife.com/Ashes+of+Ariandel">Ashes of Ariandel FextraLife Wiki</a></li>
             </ul>
-        </section>
+        </div>
         <hr>
     </main>
     <footer>
