--- a/final/darksouls3trc.html
+++ b/final/darksouls3trc.html
@@ -32,19 +32,19 @@
         The DLC also delivers some of the most formidable challenges in the series. New enemies strike hard and relentlessly, requiring sharp reflexes and a solid understanding of Dark Souls III’s combat. The optional areas test players with punishing difficulty, while the main path offers a steady push toward mastery. The Ringed City introduces unique weapons, spells, and armor sets inspired by ancient heroes and forgotten civilizations. Its boss battles are among the most iconic in the franchise, blending intense mechanics with emotional storytelling that ties directly into long-running mysteries. The final encounter serves as both a test of everything the player has learned and a symbolic farewell to the entire trilogy. The Ringed City stands as a powerful, haunting conclusion to Dark Souls III, offering closure, challenge, and a final glimpse into the world's fate as the Age of Fire fades for the last time.</p>
         </section>
         <hr>
-        <section class="darksouls3">
+        <div class="darksouls3">
             <div class="col"><img src="images/perfect.avif" alt="ds3dlc2cover"></div>
             <div class="col"><img src="images/DarkSouls_HP.webp" alt="ds3dlc2ss"></div>
             <div class="col"><img src="images/dlc2.webp" alt="ds3dlc2cool"></div>
-        </section>
+        </div>
         <hr>
         <h3>Extra Info About The Ringed City</h3>
-        <section class="about_dark_souls">
+        <div class="about_dark_souls">
             <ul>
                 <li><a href="https://darksouls3.wiki.fextralife.com/The+Ringed+City">The Ringed City FextraLife Wiki</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Dark_Souls_III:_The_Ringed_City">The Ringed City Wiki</a></li>
             </ul>
-        </section>
+        </div>
         <hr>
     </main>
     <footer>
